--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1141,7 +1141,7 @@ var display = (async function(){
 	
 	var chat = document.getElementById("contract_address_ID"); // finds the container
 	var documentFragment = document.createDocumentFragment();
-	
+	var container = document.createElement('div')
 	for (var i = addressCount; i>0; i--){
 	var address = await contract_bal.methods.address_list(i-1).call();
 	var address = web3.utils.toChecksumAddress(address)
@@ -1152,8 +1152,8 @@ var display = (async function(){
 	
 	
 	
-	var container = document.createElement('div')
-	container.id = 'c'+i;
+	
+	
 	
 	documentFragment.appendChild(container);
 	<!-- var ew1Div = document.createElement('div'); -->
@@ -1165,6 +1165,7 @@ var display = (async function(){
 	//ew1Div.class = "odd";
 	//document.getElementById("r" + i).innerHTML = "  OFFER NO: " + i
 	//document.getElementById("r" + i).style = "font-weight: bold;"
+	container.appendChild(container);
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
 	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, j).call();
