--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1148,7 +1148,7 @@ var display = (async function(){
 	var address = web3.utils.toChecksumAddress(address)
 	
 	//var chat = document.createElement("box");
-	documentFragment.appendChild(container);
+	//documentFragment.appendChild(container);
 	document.write(i)
 	 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
@@ -1267,7 +1267,7 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
-		container.appendChild(canvas);
+		documentFragment.appendChild(canvas);
 		//document.getElementById('c' + i).appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
 		//canvas.remove();
@@ -1413,7 +1413,7 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
-		container.appendChild(canvas);
+		documentFragment.appendChild(canvas);
 		//document.getElementById('c' + i).appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
 		//canvas.remove();
@@ -1432,7 +1432,7 @@ fetch(imgurl)
 	//console.log(_image2);
 	
 	
-	container.appendChild(newBtn);
+	
 	}
 	
 	
@@ -1448,7 +1448,7 @@ fetch(imgurl)
 	
 	newBtn.id = 'a' + i;
 	
-	
+	documentFragment.appendChild(newBtn);
 	
 	
 	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
