--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1139,39 +1139,46 @@ var display = (async function(){
 	
 	//address_count = addressCount
 	
-	
+	var chat = document.getElementById("contract_address_ID"); // finds the container
+	var documentFragment = document.createDocumentFragment();
+	var container = document.createElement('div')
 	
 	for (var i = addressCount; i>0; i--){
 	var address = await contract_bal.methods.address_list(i-1).call();
 	var address = web3.utils.toChecksumAddress(address)
-	var chat = document.getElementById("contract_address_ID"); // finds the container
-	//var chat = document.createElement("box");
 	
+	//var chat = document.createElement("box");
+	documentFragment.appendChild(container);
+	
+	//document.write(i)
 	 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
-	var ewDiv = document.createElement('table');
-	//ewDiv.id = 'r'+i;
 	
-	chat.appendChild(ewDiv);
-	var ew1Div = document.createElement('table');
-	ewDiv.appendChild(ew1Div);
+	
+	
+	
+	
+	
+	<!-- var ew1Div = document.createElement('div'); -->
+	<!-- ewDiv.appendChild(ew1Div); -->
 	//document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
-	var newDiv = document.createElement('div');
-	newDiv.id = 'q'+i;
-	ew1Div.appendChild(newDiv);
+	<!-- var newDiv = document.createElement('div'); -->
+	<!-- newDiv.id = 'q'+i; -->
+	<!-- ew1Div.appendChild(newDiv); -->
 	//ew1Div.class = "odd";
-	document.getElementById("q" + i).innerHTML = "  OFFER NO: " + i
-	document.getElementById("q" + i).style = "font-weight: bold;"
+	//document.getElementById("r" + i).innerHTML = "  OFFER NO: " + i
+	//document.getElementById("r" + i).style = "font-weight: bold;"
+	//container.appendChild(container);
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
 	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, j).call();
 	//console.log(contract_ID1)
 	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
 	//console.log(name)
-	var newDiv = document.createElement('div');
+	//var newDiv = document.createElement('div');
 	
 	
-	ewDiv.appendChild(newDiv);
+	//ewDiv.appendChild(newDiv);
 	//document.getElementById("rr" + i + j).innerHTML = "" // "their NFT Contract" + j + ": " + contract_ID1;
 	//var tokenID = await contract_bal.methods.tokens_list1xy(i, address, j).call();
 	//console.log(tokenID)
@@ -1180,11 +1187,11 @@ var display = (async function(){
 	
 	//var image = await image_and_name(contract_ID1, tokenID, getImage);
 	//console.log(image);
-	var newDiv = document.createElement('img');
-	newDiv.id = 'rs'+i + j;
+	<!-- var newDiv = document.createElement('img'); -->
+	<!-- newDiv.id = 'rs'+i + j; -->
 	//newDiv.setAttribute('width', '15%');
 	//newDiv.setAttribute('height', '15%');
-	newDiv.loading = "lazy";
+	//newDiv.loading = "lazy";
 	//newDiv.onload = await "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))"
 	//newDiv.addEventListener("load", "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))");
 	//chat.appendChild(newDiv);
@@ -1218,6 +1225,7 @@ var display = (async function(){
 	<!-- } -->
 	
 	var _image = await contract_bal.methods.tokens_image1xy(i, address, j).call();
+	console.log(_image);
 	const imgurl = _image //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
 fetch(imgurl)
   .then(response => response.blob())
@@ -1260,11 +1268,13 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
-		ew1Div.appendChild(canvas);
+		container.appendChild(canvas);
+		//document.getElementById('c' + i).appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
+		//canvas.remove();
 			}
 	
-   
+		
    //ew1Div.appendChild(canvas1);
   
 })
@@ -1276,11 +1286,11 @@ fetch(imgurl)
 	
 	
 	
-	var newDiv = document.createElement('div');
-	newDiv.id = 's'+i + j;
-	ew1Div.appendChild(newDiv);
+	//var newDiv = document.createElement('div');
+	//newDiv.id = 's'+i + j;
+	//ew1Div.appendChild(newDiv);
 	
-	document.getElementById("s" + i + j).innerHTML = name //"NFT Token ID1: " + tokenID;
+	//document.getElementById("s" + i + j).innerHTML = name //"NFT Token ID1: " + tokenID;
 	
 	 }
 	
@@ -1293,13 +1303,13 @@ fetch(imgurl)
 	var array_contract_ID2 = new Array();
 	var array_tokenID2 = new Array();
 	
-	var newDiv = document.createElement('table');
-	newDiv.id = 'ss'+i;
-	ewDiv.appendChild(newDiv);
-	document.getElementById("ss" + i).outerHTML = '<center style="color:#ba55d3; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>'
-	var ew2Div = document.createElement('div');
+	<!-- var newDiv = document.createElement('div'); -->
+	<!-- newDiv.id = 'ss'+i; -->
+	<!-- ewDiv.appendChild(newDiv); -->
+	//document.getElementById("r" + i).innerHTML = '<center style="color:#ba55d3; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>'
+	<!-- var ew2Div = document.createElement('div'); -->
 	
-	ewDiv.appendChild(ew2Div);
+	<!-- ewDiv.appendChild(ew2Div); -->
 	for (j=0;j<contract_length1;j++){ 
 	
 	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i, address, j).call();
@@ -1310,16 +1320,16 @@ fetch(imgurl)
 	var name2 = await new web3.eth.Contract(abi, contract_ID2).methods.name().call();
 	//console.log(name2)
 	
-	var newDiv = document.createElement('div');
+	<!-- var newDiv = document.createElement('div'); -->
 	
 	
 	
-	newDiv.id = 't'+i + j;
-	ew2Div.appendChild(newDiv);
+	<!-- newDiv.id = 't'+i + j; -->
+	<!-- ew2Div.appendChild(newDiv); -->
 	
 	
 	
-	document.getElementById("t" + i + j).innerHTML = name2 // "NFT Contract 2: " + contract_ID2;
+	//document.getElementById("t" + i + j).innerHTML = name2 // "NFT Contract 2: " + contract_ID2;
 	
 	
 	
@@ -1329,18 +1339,18 @@ fetch(imgurl)
 	array_tokenID2.push(tokenID2);
 	//document.getElementById("loan_obligation").innerHTML = "Loan is already made is " + obligation;
 	//console.log(obligation)
-	var newDiv = document.createElement('div');
-	newDiv.id = 'v'+i + j;
-	ew2Div.appendChild(newDiv);
+	<!-- var newDiv = document.createElement('div'); -->
+	<!-- newDiv.id = 'v'+i + j; -->
+	<!-- ew2Div.appendChild(newDiv); -->
 	
 	
 	
 	
 	//var image1 = image_and_name(contract_ID2, tokenID2, getImage);
 	//console.log(image);
-	var newDiv = document.createElement('img');
-	newDiv.id = 'vs'+i + j;
-	newDiv.loading = "lazy";
+	<!-- var newDiv = document.createElement('img'); -->
+	<!-- newDiv.id = 'vs'+i + j; -->
+	<!-- newDiv.loading = "lazy"; -->
 	//chat.appendChild(newDiv);
 	//ew2Div.addEventListener("load", getImage);
 	
@@ -1404,8 +1414,10 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
-		ew2Div.appendChild(canvas);
+		container.appendChild(canvas);
+		//document.getElementById('c' + i).appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
+		//canvas.remove();
 			}
 	
    
@@ -1418,7 +1430,7 @@ fetch(imgurl)
 	
 	
 	
-	console.log(_image2);
+	//console.log(_image2);
 	
 	
 	
@@ -1437,17 +1449,18 @@ fetch(imgurl)
 	
 	newBtn.id = 'a' + i;
 	
+	container.appendChild(newBtn);
 	
-	ew2Div.appendChild(newBtn);
 	
 	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
-	var newDiv = document.createElement('div');
-	newDiv.id = 'w'+i;
-	ew2Div.appendChild(newDiv);
+	<!-- var newDiv = document.createElement('div'); -->
+	<!-- newDiv.id = 'w'+i; -->
+	<!-- ewDiv.appendChild(newDiv); -->
 	
-	document.getElementById("w" + i).innerHTML = "swap completed: " + latest;
+	<!-- document.getElementById("w" + i).innerHTML = "swap completed: " + latest; -->
 	//document.getElementById("latest_block").innerHTML = latest;
 	//console.log(latest)
+	chat.appendChild(documentFragment);
 	
 	}
 	
@@ -1458,6 +1471,7 @@ fetch(imgurl)
 
 
 })()
+
         });
 
 
