--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1274,6 +1274,7 @@ fetch(imgurl)
 		//document.getElementById('c' + i).appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
 		//canvas.remove();
+		_image = ''
 			}
 	
 		
@@ -1421,6 +1422,7 @@ fetch(imgurl)
 		//document.getElementById('c' + i).appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
 		//canvas.remove();
+		_image2 = ''
 			}
 	
    
