--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1279,7 +1279,7 @@ fetch(imgurl)
 		//document.getElementById('c' + i).appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
 		//canvas.remove();
-		_image = ''
+		canvas = ''
 			}
 	
 		
@@ -1432,7 +1432,7 @@ fetch(imgurl)
 		//document.getElementById('c' + i).appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
 		//canvas.remove();
-		_image2 = ''
+		canvas = ''
 			}
 	
    
