--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1228,7 +1228,13 @@ var display = (async function(){
 	
 	var _image = await contract_bal.methods.tokens_image1xy(i, address, j).call();
 	console.log(_image + "image1");
-	canvas_1(_image)
+	try{
+		canvas_1(_image);
+		}
+	catch(err){
+		canvas_1(_image);
+	}
+	
 	
 function canvas_1 (_imgURL){
 const imgurl = _imgURL //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
@@ -1382,7 +1388,12 @@ fetch(imgurl)
 	<!-- } -->
 var _image2 = await contract_bal.methods.tokens_image2xy(i, address, j).call();
 	console.log(_image2 + "_image2");
-	canvas_2(_image2)
+	try {
+	canvas_2(_image2);
+	 }catch(err){
+		canvas_2(_image2);
+	 }
+	
 	function canvas_2(_imgURL){
 	
 	const imgurl = _imgURL //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
