--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1148,10 +1148,10 @@ var display = (async function(){
 	var address = await contract_bal.methods.address_list(i-1).call();
 	var address = web3.utils.toChecksumAddress(address)
 	var container = document.createElement('div')
-	container.id = "c" & i;
+	
 	//var chat = document.createElement("box");
 	documentFragment.appendChild(container);
-	
+	container.id = "c" & i;
 	//document.write(i)
 	 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
@@ -1226,18 +1226,20 @@ var display = (async function(){
 	
 	<!-- } -->
 	
-	var _image = await contract_bal.methods.tokens_image1xy(i, address, j).call();
+	//var _image = await contract_bal.methods.tokens_image1xy(i, address, j).call();
 	console.log(_image + "image1");
 	try{
-		canvas_2(_image);
+		canvas_2(i, address, j);
 		}
 	catch(err){
-		canvas_2(_image);
+		canvas_2(i, address, j);
 	}
 	
 	
-function canvas_1 (_imgURL){
-const imgurl = _imgURL //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
+function canvas_1 (num1, addr, num2){
+
+var _image = await contract_bal.methods.tokens_image1xy(num1, addr, num2).call();
+const imgurl = _image //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
 fetch(imgurl)
   .then(response => response.blob())
   .then(myBlob => {
@@ -1386,17 +1388,17 @@ fetch(imgurl)
             <!-- //ew2Div.appendChild(img); -->
 			
 	<!-- } -->
-var _image2 = await contract_bal.methods.tokens_image2xy(i, address, j).call();
+
 	console.log(_image2 + "_image2");
 	try {
-	canvas_2(_image2);
+	canvas_2(i, address, j);
 	 }catch(err){
-		canvas_2(_image2);
+		canvas_2(i, address, j);
 	 }
 	
-	function canvas_2(_imgURL){
-	
-	const imgurl = _imgURL //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
+	function canvas_2(num1, addr, num2){
+	var _image2 = await contract_bal.methods.tokens_image2xy(num1, addr, num2).call();
+	const imgurl = _image2 //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
 fetch(imgurl)
   .then(response => response.blob())
   .then(myBlob => {
