--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1394,7 +1394,7 @@ fetch(imgurl)
 	try {
 	canvas_2(contract_bal, i, address, j);
 	 }catch(err){
-		canvas_2(, contract_bali, address, j);
+		canvas_2(contract_bal, contract_bali, address, j);
 	 }
 	
 	function canvas_2(k, num1, addr, num2){
