--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1227,7 +1227,7 @@ var display = (async function(){
 	<!-- } -->
 	
 	//var _image = await contract_bal.methods.tokens_image1xy(i, address, j).call();
-	console.log(_image + "image1");
+	//console.log(_image + "image1");
 	try{
 		canvas_2(contract_bal, i, address, j);
 		}
@@ -1390,7 +1390,7 @@ fetch(imgurl)
 			
 	<!-- } -->
 
-	console.log(_image2 + "_image2");
+	//console.log(_image2 + "_image2");
 	try {
 	canvas_2(contract_bal, i, address, j);
 	 }catch(err){
