--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1438,7 +1438,8 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
-		container.insertBefore(canvas, container.children[0]);
+		//container.insertBefore(canvas, container.children[0]);
+		document.getElementById("b" & i).appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
 		
 		
@@ -1464,8 +1465,8 @@ fetch(imgurl)
 	
 	newBtn.id = 'a' + i;
 	
-	container.insertBefore(newBtn, container.children[0]);
-	
+	//container.insertBefore(newBtn, container.children[0]);
+	document.getElementById("b" & i).appendChild(newBtn);
 	
 	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
 	
