--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1150,8 +1150,11 @@ var display = (async function(){
 	
 	
 	//var chat = document.createElement("box");
-	documentFragment.appendChild(container);
-	container.id = "c" & i;
+	//documentFragment.appendChild(container);
+	var box = document.createElement('div')
+	box.id = "r" + i;
+	container.appendChild(box);
+	
 	//document.write(i)
 	 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
@@ -1280,7 +1283,7 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
-		container.insertBefore(canvas, container.children[0]);
+		box.insertBefore(canvas, box.children[0]);
 		//container.id = "cc" & i;
 		return canvas.toDataURL("image/jpeg",0.2);
 		
@@ -1439,7 +1442,7 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
-		container.insertBefore(canvas, container.children[0]);
+		box.insertBefore(canvas, box.children[0]);
 		//document.getElementById("cc" & i).appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
 		
@@ -1466,7 +1469,7 @@ fetch(imgurl)
 	
 	newBtn.id = 'a' + i;
 	
-	container.insertBefore(newBtn, container.children[0]);
+	box.insertBefore(newBtn, box.children[0]);
 	//document.getElementById("cc" & i).appendChild(newBtn);
 	
 	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
