--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1150,7 +1150,7 @@ var display = (async function(){
 	
 	
 	//var chat = document.createElement("box");
-	//documentFragment.appendChild(container);
+	documentFragment.appendChild(container);
 	var box = document.createElement('div')
 	box.id = "r" + i;
 	container.appendChild(box);
