--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1271,13 +1271,13 @@ fetch(imgurl)
     if (width > 75 {
       //height *= max_width / width;
       height = Math.round(height *= 75 / width);
-      width = (75 + math.random());
+      width = 75 + math.random();
     }
   } else {
     if (height > 75) {
       //width *= max_height / height;
       width = Math.round(width *= 75 / height);
-      height = (75 + math.random());
+      height = 75 + math.random();
     }
   }
   
