--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1268,7 +1268,7 @@ fetch(imgurl)
 		var height = img.height;
 
  if (width > height) {
-    if (width > 75 {
+    if (width > 75 ){
       //height *= max_width / width;
       height = Math.round(height *= 75 / width);
       width = 75 + math.random();
